2011-05-12  Rob Buis  <rwlbuis@gmail.com>

Reviewed by Eric Seidel.

        REGRESSION(79985): Changes in fill-opacity should trigger repaint but don't
        https://bugs.webkit.org/show_bug.cgi?id=59941

        Also consider fill-opacity when determining whether StyleDifferenceRepaint is needed.

        Test: svg/custom/fill-opacity-update.svg

        * rendering/style/SVGRenderStyle.cpp:
        (WebCore::SVGRenderStyle::diff):

Canonical link: https://commits.webkit.org/75988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86331 268f45cc-cd09-0410-ab3c-d52691b4dbfc